--- a/00_tensorflow_fundamentals.ipynb
+++ b/00_tensorflow_fundamentals.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNeqbxuBmR3/mCaZMkoqvaH",
+      "authorship_tag": "ABX9TyMQJeSZKXx9s7dCMTkFo7zA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1286,7 +1286,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Tensor Operasyonları tensoru manipule etmek yönetmek"
+        "# Tensor Operasyonları tensoru manipule etmek yönetmek\n",
+        "\"+\" , \"-\" , \"*\" , \"/\""
       ],
       "metadata": {
         "id": "JIhcg3y6fuaC"
@@ -1294,18 +1295,250 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "tensor=tf.constant([[2,5],[3,7]])\n",
+        "tensor+10#burada atama işlemi olmaz tensor değişmez olması için tensor=tensor+10 yapmamız gerekir\n",
+        "tensor,tensor+15\n",
+        "#bu işlemler diğer temel 3 operasyon için de aynı şekilde işler"
+      ],
       "metadata": {
-        "id": "hZaoqUZKft3f"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "hZaoqUZKft3f",
+        "outputId": "42c5fcab-e903-4ec5-b79a-1f3ed37faca5"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 48,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(<tf.Tensor: shape=(2, 2), dtype=int32, numpy=\n",
+              " array([[2, 5],\n",
+              "        [3, 7]], dtype=int32)>, <tf.Tensor: shape=(2, 2), dtype=int32, numpy=\n",
+              " array([[17, 20],\n",
+              "        [18, 22]], dtype=int32)>)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 48
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "#ayrıca tenserflowun kendi fonksiyonlarını da kullanabiliriz\n",
+        "tf.multiply(tensor,2)\n",
+        "tensor#görüldüğü gibi yine atama işlemi olmadı\n",
+        "#gpu üzerinde büyük tesnor la daha hızlı işlem için kendi fonksiyonlarını kullanmak gerekir"
+      ],
       "metadata": {
-        "id": "bTZzouUmfb_I"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "bTZzouUmfb_I",
+        "outputId": "7f732710-4326-4d7d-acdd-0d98c6c74a5a"
+      },
+      "execution_count": 49,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(2, 2), dtype=int32, numpy=\n",
+              "array([[2, 5],\n",
+              "       [3, 7]], dtype=int32)>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 49
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "***Matrix Çarpımı***"
+      ],
+      "metadata": {
+        "id": "ltazzqmIitad"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(tensor)\n",
+        "tf.matmul(tensor,tensor)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "4E70IMGgivYa",
+        "outputId": "221e5486-c85a-4454-b68c-9d937ab47d3f"
+      },
+      "execution_count": 51,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tf.Tensor(\n",
+            "[[2 5]\n",
+            " [3 7]], shape=(2, 2), dtype=int32)\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(2, 2), dtype=int32, numpy=\n",
+              "array([[19, 45],\n",
+              "       [27, 64]], dtype=int32)>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 51
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#python @ operatörü ile matrix çarpımı yapılabilir\n",
+        "tensor @ tensor"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9aDG4B4YmA-C",
+        "outputId": "7bcdf768-8c2b-490c-d8f6-c7464e8f9878"
+      },
+      "execution_count": 55,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(2, 2), dtype=int32, numpy=\n",
+              "array([[19, 45],\n",
+              "       [27, 64]], dtype=int32)>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 55
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#bir tensoru reshape ile yeniden şekillendirebiliriz\n",
+        "Y=tf.constant([[1,2,3],[4,5,6]])# şekilde shape=(2,3) olan bir tensor var\n",
+        "Y "
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "W8rAjlh6mYKp",
+        "outputId": "c2055e26-6ff3-4709-fc6f-489deb190cd8"
+      },
+      "execution_count": 57,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(2, 3), dtype=int32, numpy=\n",
+              "array([[1, 2, 3],\n",
+              "       [4, 5, 6]], dtype=int32)>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 57
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Reshape yeniden şekillendirme (3,2)->(3,2)"
+      ],
+      "metadata": {
+        "id": "IXNA-_fKooPx"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tf.reshape(Y,shape=(3,2))#atama işlemi olmadığı için Y değişmedi ama atama ile bu yeni hali alınabilir"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "bdFagSjrn1tb",
+        "outputId": "377a281a-a445-4729-ba87-11f8eb6c9005"
+      },
+      "execution_count": 61,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(3, 2), dtype=int32, numpy=\n",
+              "array([[1, 2],\n",
+              "       [3, 4],\n",
+              "       [5, 6]], dtype=int32)>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 61
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tf.transpose(Y)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "eNWmrv_LpRCI",
+        "outputId": "d0203a63-9755-4c58-a4bb-457a4b477951"
+      },
+      "execution_count": 62,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(3, 2), dtype=int32, numpy=\n",
+              "array([[1, 4],\n",
+              "       [2, 5],\n",
+              "       [3, 6]], dtype=int32)>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 62
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#matrix çarpımı ayrıca dotproduct iç çarpımı olarak da gösterilebilir\n",
+        "#tek fark bir tanesinin tranpose olması gerektiğidir örnek gösterim:\n",
+        "#tf.tensordot()\n"
+      ],
+      "metadata": {
+        "id": "VdvkpMSqqMd0"
       },
       "execution_count": null,
       "outputs": []
