--- a/00_tensorflow_fundamentals.ipynb
+++ b/00_tensorflow_fundamentals.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO5GLP/MvuRo82m5WDjxbnh",
+      "authorship_tag": "ABX9TyNkyczTwkGzzqfhB/7ofICt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -64,7 +64,7 @@
         "id": "J7Nu0O62t2x6",
         "outputId": "0de0013d-8304-48b7-c9f5-3ed7b9b64113"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -90,7 +90,7 @@
         "id": "GIdE5Ehiuuq8",
         "outputId": "e5a51cda-1f52-4249-8ec1-831cb04cdf01"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -118,7 +118,7 @@
         "id": "bctFAZ5Nu_Nc",
         "outputId": "10525524-0b59-40b1-dda8-e99a1e89aaa1"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -144,7 +144,7 @@
         "id": "Rl6E0HSqvGe7",
         "outputId": "436b7116-04b3-4c5e-dd3e-4bfac50d7c5e"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -172,7 +172,7 @@
         "id": "3wVA2CWyvRKv",
         "outputId": "21ab4927-5e20-491c-cfa3-cfd24a4e22ab"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -200,7 +200,7 @@
         "id": "lYQGA06KvcnL",
         "outputId": "5c7cdede-1194-41d9-9f0e-e3966547366b"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -230,7 +230,7 @@
         "id": "ErjzjdvVvzjn",
         "outputId": "ac8ab9e8-0678-47ad-943f-19ed07d9c00f"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -259,7 +259,7 @@
         "id": "h2Zpd8xxwH4K",
         "outputId": "045090aa-4815-4b37-aa0e-6924780934e2"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -291,7 +291,7 @@
         "id": "Go31mbjPxNV-",
         "outputId": "898d7750-8eb2-42ca-ca3d-cb874435e50c"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -325,7 +325,7 @@
         "id": "Bq8RCHooyk8p",
         "outputId": "f8f2fd7c-0bf9-4fd9-d0ba-ad9d18031283"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -368,7 +368,7 @@
         "id": "87EsOxPMyoD-",
         "outputId": "b68c54c6-ed1e-491d-fdec-dd3a70a4ab69"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -396,7 +396,7 @@
         "id": "d2B2IJ660R9z",
         "outputId": "c7c1cef5-c3ad-491b-80ae-10fc5a36b139"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -423,7 +423,7 @@
         "id": "2cT6kfu51det",
         "outputId": "0d8dae99-66c0-4ce9-ef7e-bcbb67e199f3"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -463,7 +463,7 @@
         "id": "OTpXl2SF1iAX",
         "outputId": "49ae2d51-5043-4270-f449-22544e074109"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -513,7 +513,7 @@
         "id": "sRyWtsEw7Kau",
         "outputId": "d5c0096b-d9d3-4020-f1dc-87a55e5136c8"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -539,7 +539,7 @@
         "id": "SVOP09Mi6gdJ",
         "outputId": "2067a629-9029-4272-9497-8c7ca0fa9e6b"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -568,7 +568,7 @@
         "id": "DIak-x0O8RIq",
         "outputId": "b0073547-1b64-4761-9cb5-39f668b95aab"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -597,7 +597,7 @@
         "id": "jwZDxRHr84Ga",
         "outputId": "4abcba1e-fd34-4042-e3f0-00a1403a61d9"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -629,7 +629,7 @@
         "id": "Kg6c0Xd89zcn",
         "outputId": "dd77af08-2f47-4b4c-fa09-3ef444c6410c"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -660,7 +660,7 @@
         "id": "TMLQWlbxPhqU",
         "outputId": "326c2d2d-6110-40a1-cbe5-d8cb0850bc08"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -693,7 +693,7 @@
         "id": "fSqpzvPVQY2u",
         "outputId": "42d3ab56-6aed-4780-cc8c-cfb60b098764"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -722,7 +722,7 @@
         "id": "labuYMhGQbbc",
         "outputId": "362bcf81-f171-435c-9368-4b2e0fef9c03"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -763,7 +763,7 @@
         "id": "SAWYdOTBQyon",
         "outputId": "4c740399-490d-4596-db98-3f1aed779200"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -792,7 +792,7 @@
         "id": "2HdkE11sR3rB",
         "outputId": "1fcc7dce-873f-43fe-fff2-c4c7222e0e97"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -822,7 +822,7 @@
         "id": "pwadZMooSK5B",
         "outputId": "089ed285-c848-4b77-e93c-28f5136d5d9a"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -870,7 +870,7 @@
         "id": "PN4gEovcT_oM",
         "outputId": "42386f44-a415-47b2-eab6-53063e88cdd6"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -926,7 +926,7 @@
         "id": "KYanVdJkTPiU",
         "outputId": "d5e218df-e4f4-4201-c40a-54629266d7a8"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -953,7 +953,7 @@
         "id": "T6UcR0JaWtXt",
         "outputId": "531628c7-6df0-4176-a759-7352ffefc8cb"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -980,7 +980,7 @@
         "id": "tMyFOE1SXnRa",
         "outputId": "d3988370-6a40-4d5d-9958-246661c33bae"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1006,7 +1006,7 @@
         "id": "pd4h6Gi0Xtvi",
         "outputId": "4e375cbc-9e19-47e2-9886-4e9ad58dbf02"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1044,7 +1044,7 @@
         "id": "wXrcZTy7YF-l",
         "outputId": "4684bd24-f40d-4524-f9ca-301c450f1543"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1071,7 +1071,7 @@
         "id": "GHWQRwARYpLA",
         "outputId": "9b07f4c2-6083-43dd-86a4-2d4ec248b7e9"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1111,7 +1111,7 @@
         "id": "2ouMPbm5aFq_",
         "outputId": "8751132a-7afd-4458-8a9f-06663272bf09"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1141,7 +1141,7 @@
         "id": "VOHo-jo4eIy6",
         "outputId": "3c32c6d2-0a09-4222-dfd3-67b4c8e6b7ad"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1170,7 +1170,7 @@
         },
         "outputId": "283d80be-4df0-4c0c-9128-f96feae71a2f"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1202,7 +1202,7 @@
         "id": "NwFJLj9ZdeP2",
         "outputId": "bb1110f6-1e36-45bf-f19c-b29dffaa058c"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1233,7 +1233,7 @@
         "id": "iPMWQlYbeBM1",
         "outputId": "743469d6-7f7b-4a9e-bc89-149d22a1f96b"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1264,7 +1264,7 @@
         "id": "AAMw6NuLep5k",
         "outputId": "4266a332-9b2a-48dc-a36a-8a0d13bcc0d5"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1308,7 +1308,7 @@
         "id": "hZaoqUZKft3f",
         "outputId": "5e08e39d-173d-45ac-ad8e-7aab32db3351"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1341,7 +1341,7 @@
         "id": "bTZzouUmfb_I",
         "outputId": "986b8f09-aaac-4d34-9ba6-fc7ae9a76316"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1379,7 +1379,7 @@
         "id": "4E70IMGgivYa",
         "outputId": "849c18c7-b667-4c4a-832a-d47b3b4be5aa"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1417,7 +1417,7 @@
         "id": "9aDG4B4YmA-C",
         "outputId": "7335bb8f-4c13-4dee-9c17-8c036ae51bbd"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1447,7 +1447,7 @@
         "id": "W8rAjlh6mYKp",
         "outputId": "4b973b45-61cd-48e7-86d0-393a5bcf1719"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1484,7 +1484,7 @@
         "id": "bdFagSjrn1tb",
         "outputId": "9d3de0a3-0826-457b-ffa6-cbaa18c1a80c"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1513,7 +1513,7 @@
         "id": "eNWmrv_LpRCI",
         "outputId": "4c603175-70ad-4a3f-e79a-16f23c64f10d"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1540,7 +1540,7 @@
       "metadata": {
         "id": "VdvkpMSqqMd0"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1550,13 +1550,13 @@
         "tf.abs(D)#negatif değerlerin mutlak değerini alır"
       ],
       "metadata": {
-        "id": "lzIeRdHK4phF",
-        "outputId": "ed9acc20-6962-43f0-b42d-0f3ce1833c2a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "lzIeRdHK4phF",
+        "outputId": "ed9acc20-6962-43f0-b42d-0f3ce1833c2a"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1577,13 +1577,13 @@
         "E"
       ],
       "metadata": {
-        "id": "tLw-3SlU4-Nj",
-        "outputId": "e086995d-b153-442c-8087-70a294f8578b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "tLw-3SlU4-Nj",
+        "outputId": "e086995d-b153-442c-8087-70a294f8578b"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1606,13 +1606,13 @@
         "tf.size(E),E.shape,E.ndim"
       ],
       "metadata": {
-        "id": "mX7bPhbF5H3l",
-        "outputId": "f49d73e7-0a66-47ce-f542-a4f122e87125",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "mX7bPhbF5H3l",
+        "outputId": "f49d73e7-0a66-47ce-f542-a4f122e87125"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1633,13 +1633,13 @@
         "tf.reduce_min(E),tf.reduce_max(E),tf.reduce_mean(E),tf.reduce_sum(E)"
       ],
       "metadata": {
-        "id": "igGHDkj85PUP",
-        "outputId": "ea5a4679-c1fb-427a-a04f-643e23ef08a9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "igGHDkj85PUP",
+        "outputId": "ea5a4679-c1fb-427a-a04f-643e23ef08a9"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1663,13 +1663,13 @@
         "tfp.stats.variance(E)#varyans bulma"
       ],
       "metadata": {
-        "id": "_KArw_OX6EL6",
-        "outputId": "4a23238e-89de-4bdc-ec41-d8b8dce17408",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "_KArw_OX6EL6",
+        "outputId": "4a23238e-89de-4bdc-ec41-d8b8dce17408"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1690,13 +1690,13 @@
         "tfp.stats.stddev(tf.cast(E,dtype=tf.float32))"
       ],
       "metadata": {
-        "id": "JgFRKaWS7Jkj",
-        "outputId": "633470bb-e829-4ae2-d406-6148f87bf251",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "JgFRKaWS7Jkj",
+        "outputId": "633470bb-e829-4ae2-d406-6148f87bf251"
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1709,6 +1709,20 @@
           "execution_count": 56
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#positional maximum and minimum\n",
+        "tf.random.set_seed(42)\n",
+        "F=tf.random.uniform(shape=[50])\n",
+        "F"
+      ],
+      "metadata": {
+        "id": "dGvpqhHMEBEV"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
